# retro-handheld-configs

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Justfile  README.md  flake.nix  llms.txt  mkdocs.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  security-sbom.yml
backups/Android/aurora-store/current/: metadata.json
backups/GammaOSNext/retroid-pocket-classic-6-button/v1.0.0-retroidpocketclassic/data/user/0/com.dsemu.drastic/shared_prefs/: _Dra$t1c_FS$_.xml
backups/GammaOSNext/retroid-pocket-classic-6-button/v1.0.0-retroidpocketclassic/data/user/0/com.retroarch.aarch64/shared_prefs/: com.retroarch.aarch64_preferences.xml
backups/GammaOSNext/retroid-pocket-classic-6-button/v1.0.0-retroidpocketclassic/data/user/0/org.mupen64plusae.v3.fzurita/shared_prefs/: com.google.android.gms.measurement.prefs.xml
backups/GammaOSNext/retroid-pocket-classic-6-button/v1.0.0-retroidpocketclassic/storage/emulated/0/PSP/Cheats/: .nomedia
backups/GammaOSNext/retroid-pocket-classic-6-button/v1.0.0-retroidpocketclassic/storage/emulated/0/PSP/GAME/: .nomedia
configs/devices/: retroid-pocket-classic-6-button-gammaos-next.toml
docs/: index.md  llms.txt  workflows.md
managed/retroid-pocket-classic-6-button-gammaos-next/obtainium/: settings-only.json  settings-only.json.age
scripts/: backup_aurora_secure.sh  bootstrap_age_key_from_bitwarden.sh  bootstrap_age_key_from_rbw.sh  enable_adb_root.sh  restore_aurora_secure.sh
src/rhc/: __init__.py  cli.py  state.py
tests/: test_cli.py  test_state.py
(+58 files in other folders)
